# matty

./: Cargo.toml  README.md
src/: lib.rs  main.rs  matrix.rs  utils.rs  vector.rs  vector_simd.rs
src/simd/: matrix.rs  vector.rs
