[package]
name = "matty"
description = "A cute little matrix and vector library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.17"
rand = "*"

[features]
simd = [] # feature has no explicit dependencies
